--- a/vignettes/index_event.Rmd
+++ b/vignettes/index_event.Rmd
@@ -15,7 +15,7 @@ library(ggplot2)
 index_acs_diagnoses <- msrv$sus$apc_spells_diagnosis %>% 
   # Only cohort NHS numbers
   {if(.Platform$OS.type == "windows") {
-    dplyr::right_join(data.frame("nhs_number" = cohort_ids), by="nhs_number", copy = TRUE) 
+    dplyr::right_join(., data.frame("nhs_number" = cohort_ids), by="nhs_number", copy = TRUE) 
   } else {
     dplyr::filter(., nhs_number %in% cohort_ids)
   }} |>
@@ -74,13 +74,10 @@ opcs_pci_codes   <- read.csv(system.file("opcs_codes/pci_procedure_codes.csv", p
 opcs_cabg_codes  <- read.csv(system.file("opcs_codes/cabg_procedure_codes.csv", package = "acsprojectns"))
 opcs_codes       <- rbind(opcs_angio_codes, opcs_pci_codes, opcs_cabg_codes)
 
-# manually code as missing so we can add if they dont appear in the dataset
-proc_cols <- c(cabg=NA, angiogram=NA, pci=NA, none=NA)
-
 index_acs_procedures <- msrv$sus$apc_spells_procedures %>% 
   # Only cohort NHS numbers
   {if(.Platform$OS.type == "windows") {
-    dplyr::right_join(data.frame("nhs_number" = cohort_ids), by="nhs_number", copy = TRUE) 
+    dplyr::right_join(., data.frame("nhs_number" = cohort_ids), by="nhs_number", copy = TRUE) 
   } else {
     dplyr::filter(., nhs_number %in% cohort_ids)
   }} |>
@@ -110,6 +107,8 @@ index_acs_procedures <- msrv$sus$apc_spells_procedures %>%
   dplyr::mutate(only_angiogram = dplyr::if_else(!is.na(angiogram) & is.na(pci), angiogram, NA),
                 any_angiogram  = dplyr::coalesce(angiogram, pci))
 
+# manually code as missing so we can add if they don't appear in the dataset
+proc_cols <- c(cabg=NA, angiogram=NA, pci=NA, none=NA)
 # add procedure cols if don't exist (i.e. they didn't appear anywhere for anyone
 index_acs_procedures <- index_acs_procedures |>
   tibble::add_column(!!!proc_cols[setdiff(names(proc_cols), names(index_acs_procedures))]) |>
@@ -215,14 +214,18 @@ longtable = T, booktabs = T, caption = "Index ACS summary data by fudged Cambrid
 ## Procedures
 ```{r index_acs_procedures, results="markup"}
 index_acs_main |>
-  dplyr::count(fudge_cambridge_segment, procedure) |>
-  dplyr::group_by(fudge_cambridge_segment) |>
-  dplyr::mutate(pct = prop.table(n) * 100) |>
-  ggplot(aes(fudge_cambridge_segment, n, fill=procedure)) +
-  geom_bar(stat="identity") +
+  dplyr::mutate(age_cat = cut(age, breaks=c(0,40,60,80,120), labels=c("<40", "40-59", "60-79","80+"), right=F), 
+                primary_diagnosis = icdb::group_string(primary_diagnosis)) |>
+  dplyr::count(age_cat, primary_diagnosis, procedure) |>
+  dplyr::group_by(age_cat, primary_diagnosis) |>
+  dplyr::mutate(pct = round(prop.table(n) * 100, digits=0)) |>
+  ggplot(aes(primary_diagnosis, n, fill=procedure)) +
+  geom_bar(stat="identity", position = "stack") +
+  facet_grid(~age_cat) +
   ylab("Number of patients") +
-  geom_text(aes(label=paste0(sprintf("%1.1f", pct),"%")),
+  xlab("Age category") +
+  geom_text(aes(label=paste0(sprintf("%1i", pct),"%")),
             position=position_stack(vjust=0.5)) +
-  ggtitle("Procedure breakdown")
+  ggtitle("Index ACS admission procedure breakdown")
     
 ```
